--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
         "serve-favicon": "^2.5.0"
     },
     "devDependencies": {
+        "eslint": "^5.6.0",
+        "eslint-config-airbnb-base": "^13.1.0",
+        "eslint-plugin-import": "^2.14.0",
+        "jest": "^23.6.0",
         "nodemon": "^1.18.4"
     }
 }
