--- a/src/config/database.config.json
+++ b/src/config/database.config.json
@@ -3,5 +3,7 @@
     "host": "localhost",
     "user": "root",
     "password": "password",
-    "multipleStatements": true
+    "multipleStatements": true,
+    "dialect": "mysql",
+    "port": "3306"
 }
