--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
-    "name": "torneo-luefi.api",
-    "version": "0.0.1",
-    "description": "APIRest for Torneo LUEFI",
-    "main": "index.js",
-    "scripts": {
-        "dev": "nodemon src/index.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/Raagh/torneo-luefi.web.git"
-    },
-    "author": "Ovelar Nicolas - Patricio Ferraggi",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/Raagh/torneo-luefi.web/issues"
-    },
-    "homepage": "https://github.com/Raagh/torneo-luefi.web#readme",
-    "dependencies": {
-        "cors": "^2.8.4",
-        "express": "^4.16.3",
-        "mysql": "^2.16.0",
-        "mysql2": "^1.6.1",
-        "sequelize": "^4.38.1",
-        "sequelize-cli": "^4.1.1",
-        "serve-favicon": "^2.5.0"
-    },
-    "devDependencies": {
-        "eslint": "^5.6.0",
-        "eslint-config-airbnb-base": "^13.1.0",
-        "eslint-plugin-import": "^2.14.0",
-        "jest": "^23.6.0",
-        "nodemon": "^1.18.4"
-    }
+  "name": "torneo-luefi.api",
+  "version": "0.0.1",
+  "description": "API Rest for Torneo LUEFI",
+  "main": "index.js",
+  "scripts": {
+    "dev": "nodemon src/index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Raagh/torneo-luefi.api.git"
+  },
+  "author": "Ovelar Nicolas - Patricio Ferraggi",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Raagh/torneo-luefi.api/issues"
+  },
+  "homepage": "https://github.com/Raagh/torneo-luefi.web#readme",
+  "dependencies": {
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "mysql": "^2.16.0",
+    "mysql2": "^1.6.1",
+    "sequelize": "^4.38.1",
+    "sequelize-cli": "^4.1.1",
+    "serve-favicon": "^2.5.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.6.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "jest": "^23.6.0",
+    "nodemon": "^1.18.4"
+  }
 }
